--- a/styles.css
+++ b/styles.css
@@ -135,11 +135,41 @@ div.item {
 
 .bottom {
   background-color: #f8f3ef;
-  text-align: center;
+  padding: 20px;
+  
+
+  
+}
+
+.button{
+  background-color: #f8f3ef;
+  border-radius: 5px;
+  border-color: white;
+  padding: 0px 25px;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-size: 12px;
+  margin-left: 250px;
+  position: relative;
+  top: -40px;
+
+  font-family: "Urbanist", serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+
+  
+
+
+
+  
+
+
 }
 
 .footer {
   background-color: #6f8e88;
+  text-align: center;
 }
 
 body {
