--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ font-size: 20px;
 
 }
 
-/* .links {
-  display: flex;
-  justify-content: space-;
+.links {
+  
+  font-size: 15px;
   
   
-} */
+}
 
 .ledimage {
   width:250px;
@@ -135,7 +135,8 @@ div.item {
 
 .bottom {
   background-color: #f8f3ef;
-  padding: 20px;
+  padding: 5px;
+  margin: 50px;
   
 
   
@@ -145,6 +146,7 @@ div.item {
   background-color: #f8f3ef;
   border-radius: 5px;
   border-color: white;
+
   padding: 0px 25px;
   cursor: pointer;
   font-family: sans-serif;
