--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@ font-size: 20px;
 
 .logo {
   font-weight: bolder;
-  /* margin-left: 30px; */
+  margin-left: 30px;
   color: black;
+
 
  
 
@@ -16,7 +17,8 @@ font-size: 20px;
 
 .links {
   
-  font-size: 15px;
+  font-size: 12px;
+  margin-right: 15px;
   
   
 }
